tests/fixtures/invalid/bytes_rshift_int.py
# Cannot right shift Bytes and Int
x: bytes = b"hello" >> 1
